mdapipkg/unpackaged/objects/Instrument__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Brass</fullName>
                </value>
                <value>
                    <fullName>Percussion</fullName>
                </value>
                <value>
                    <fullName>Strings</fullName>
                </value>
                <value>
                    <fullName>Woodwinds</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flute</fullName>
                </value>
                <value>
                    <fullName>Clarinet</fullName>
                </value>
                <value>
                    <fullName>Double Reed</fullName>
                </value>
                <value>
                    <fullName>Saxophone</fullName>
                </value>
                <value>
                    <fullName>Trumpet</fullName>
                </value>
                <value>
                    <fullName>French Horn/Baritone/Euphonium</fullName>
                </value>
                <value>
                    <fullName>Trombone</fullName>
                </value>
                <value>
                    <fullName>Bass</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Musician__c</fullName>
        <description>Contact</description>
        <inlineHelpText>Contact</inlineHelpText>
        <label>Musician</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Instruments</relationshipLabel>
        <relationshipName>Instruments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Instrument</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Instrument Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Instruments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>